<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:gravity="center"
    tools:context="com.dahyeon.mirim.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/email_up"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_gravity="left"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text=" @e-mirim.hs.kr "
            android:textSize="15dp"
            android:layout_gravity="right"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_email"
        style="?android:textAppearanceSmall"
        android:clickable="true"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_emailck"
        android:textColor="#098015"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:id="@+id/password_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/passwordck_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordck"
        android:imeActionId="6"
        android:imeActionLabel="@string/passwordck"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/because_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ff0000"
        android:layout_gravity="left"/>

    <Button
        android:id="@+id/btn_up"
        style="?android:textAppearanceSmall"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:background="@drawable/btn_design"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/text_up"
        style="?android:textAppearanceSmall"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_signin"
        android:textStyle="bold"/>

</LinearLayout>