<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mirimapp.mirim.activities.M51Activity">

    <ImageButton
        android:layout_width="70sp"
        android:layout_height="50sp"
        android:padding="5pt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleType="centerInside"
        android:src="@drawable/menu"
        android:background="@android:color/transparent"
        android:id="@+id/menu"
        />

    <android.support.v4.widget.DrawerLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/drawer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <EditText
                android:id="@+id/now_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/now_passwd"
                android:imeActionId="6"
                android:imeActionLabel="string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="50dp"
                android:background="#ffffff"/>

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_passwd"
                android:imeActionId="6"
                android:imeActionLabel="string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="10dp"
                android:background="#ffffff"/>

            <EditText
                android:id="@+id/new_passwordck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_passwdck"
                android:imeActionId="6"
                android:imeActionLabel="string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="10dp"
                android:background="#ffffff"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="30dp">
                <Button
                    android:id="@+id/m51_btn_ck"
                    style="?android:textAppearanceSmall"
                    android:layout_width="100dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/ck"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:background="@drawable/btn_design" />

                <Button
                    android:id="@+id/m51_btn_can"
                    style="?android:textAppearanceSmall"
                    android:layout_width="100dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/cancle"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:background="@drawable/btn_design" />
            </LinearLayout>
        </LinearLayout>

        <include
            layout="@layout/activity_drawer" />

    </android.support.v4.widget.DrawerLayout>

</android.support.constraint.ConstraintLayout>
